--- a/helloWwebgl.html
+++ b/helloWwebgl.html
@@ -21,7 +21,7 @@
         </script>
         <script id="shader-fs" type="x-shader/x-fragment">
                 precision highp float;
-                //void main(void)
+                void main(void)
                 {
                     gl_FragColor = vec4(1.,1.,1., 1.);
                 }
@@ -37,6 +37,9 @@
             var points = [0.,0.5,0.,
                          -0.5,-0.5,0.,
                          0.5,-0.5,0.]
+            var color = [1.,0.,0.,1.,
+                         0.,1.,0.,1.,
+                         0.,1.,1.,0.]
             // 3. inicializar los shaders.
             //create and compile the vertex shader
             var vertexShaderSrc = document.getElementById("shader-vs").text;
