--- a/3-1-webgl-hello-world.2.html
+++ b/3-1-webgl-hello-world.2.html
@@ -44,10 +44,16 @@
 			//gl.clear(gl.COLOR_BUFFER_BIT);
 
 			// 2. Inciializar Escena
-			var positions = [ 0., 0.5, 0., 1., 0., 0., 1.,	// V0
-				              -0.5, -0.5, 0., 0., 1., 0., 1.,	// v1
-					           0.5, -0.5, 0., 0., 0., 1., 1.	// V2
-						     ];
+			var positions1 = [-0.5, 0.5, 0.,1.,0.,0.,1.,	// v0
+							-0.5, -0.5, 0.,0.,1.,0.,1., 	// v1
+							0.5, -0.5, 0.,0.,0.,1.,1.	// v2
+		  					];
+
+// Triangle 2
+			var positions2 = [-0.5, 0.5, 0.,1.,0.,0.,1.,	// v0
+							0.5, -0.5, 0.,0.,0.,0.,1., 	// v2
+							0.5,  0.5, 0.,1.,1.,1.,1.,	// v3
+							];
 
 			// 3. Inicializar Shaders
 			// Crear el Vertex Shader object
